# Student-Information-System

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  MANUAL.md  README.md  docker-compose.yml  presentation.html
db/: init.sql
docs/: INSTALL.md  MANUAL.md  THANKYOU.md  week-1.md  week-2.md  week-3.md  week-4.md
include/: db.hpp  logger.hpp  student.hpp  validation.hpp
src/: db.cpp  logger.cpp  main.cpp  schema.cpp  validation.cpp
tests/: test_db_smoke.cpp  test_validation.cpp
